# ramses-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Appearance.cpp  Camera.cpp  Geometry.cpp  Node.cpp  RamsesObject.cpp  RamsesPython.cpp  Scene.cpp  SceneGraphIterator.cpp  SceneToText.cpp  Window.cpp
src/include/ramses-python/: Appearance.h  Camera.h  Geometry.h  Mesh.h  Node.h  RamsesObject.h  RamsesPython.h  RenderGroup.h  RenderPass.h  Resource.h  Scene.h  SceneGraphIterator.h  SceneToText.h  TextureSampler.h  TypeConversions.h  Window.h
test/: py-ramses-test.py
